Fix for dark mode change. Fix migrate button.

--- a/Palladium Rifts by Grinning Gecko/src/scss/rifts.scss
+++ b/Palladium Rifts by Grinning Gecko/src/scss/rifts.scss
@@ -1077,6 +1077,10 @@ img.logo {
 body.sheet-darkmode {
   color: var(--dark-secondarytext);
 
+  .sheetform {
+    background-color: #343434;
+  }
+
   h1,
   h2,
   h3,
